Show Randomized Meals in List
Kotlin updated to 1.4.20
Added initial meals list to assets for first time use.
Added initial UseCase classes and associated Koin module.
Updated Meal data class to autoincrement the `id` Primary Key value.
Added Action sealed class to help with app state.
Added Adapter and ViewHolder for RecyclerView population.
Added functions for list randomization and population.

--- a/mealrandomizer/src/main/res/values/strings.xml
+++ b/mealrandomizer/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="button_randomize">Randomize</string>
     <string name="button_add_item">Add Item</string>
+    <string name="button_show">Show</string>
+    <string name="et_meal_hint">Meal</string>
+    <string name="tv_total_meals">Total Meals Saved: %1$d</string>
 </resources>
